$Id: CHANGELOG,v 1.15 1996-02-05 17:58:02 adam Exp $

06/19/95 Release of ir-tcl-1.0b
------------------------------------------------------
06/20/95 Cancel mechanism changed in client.tcl. After a cancel, the
         interface becomes 'ready' immediately.

06/20/95 New setting: failInfo. It returns failback diagnostics.

06/21/95 Bitmaps (book[1-9]) moved to subdirectory bitmaps.

06/21/95 Install procedure change. GNU autoconf used to create the
         Makefile. The user may type 'make install' to copy system files
         to /usr/local/...

06/22/95 SUTRS. New setting, 'getSutrs', to retrieve a SUTRS record
         as a Tcl string. 

06/22/95 Display format routines (line.tcl,medium.tcl,raw.tcl) changed
         to handle display of SUTRS records. 

06/22/95 Preferred record syntax can be specified by the user in client.tcl.

06/26/95 ir-tk doesn't read client.tcl when no options are given. Instead
         it works like wish. The demonstrating client is named 'irclient'
         when installed in the directory with executables.

06/26/95 Release of ir-tcl-1.0b1
------------------------------------------------------

06/27/95 Bug fix. The present response didn't always get proper
         result-set info.

06/27/95 Bug fix. Action loadFile didn't set record type.

06/27/95 Bug fix. 'make install' fails on some systems.

06/27/95 Bug fix. In client.tcl: didn't observe non-surrogate diagnostics
         when resultCount was non-zero.

06/29/95 IrTcl now works with both tk4.0b4/tcl7.4b4 and tk3.6/tcl7.3

06/30/95 The interpretation of MARC records is a little less strict, i.e.
         a larger set of records are treated as being MARC.

08/04/95 Requests are queued when responses are pending.

08/24/95 Modified to work with yaz 1.0b3

08/24/95 IrTcl works with tk4.0 and tcl7.4.

08/28/95 Release of ir-tcl-1.0b2
------------------------------------------------------
10/16/95 New setting: ElementSetNames
